Add DeltaTimeClass and ClassDiagram
Add
 deltatimeclass.h
 deltatimeclass.cpp

Update
 ClassDiagram.docx

--- a/GraduationProject/GraduationProject/GraduationProject.vcxproj
+++ b/GraduationProject/GraduationProject/GraduationProject.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClInclude Include="cameraclass.h" />
     <ClInclude Include="d3dclass.h" />
+    <ClInclude Include="deltatimeclass.h" />
     <ClInclude Include="graphicsclass.h" />
     <ClInclude Include="inputclass.h" />
     <ClInclude Include="lightclass.h" />
@@ -32,6 +33,7 @@
   <ItemGroup>
     <ClCompile Include="cameraclass.cpp" />
     <ClCompile Include="d3dclass.cpp" />
+    <ClCompile Include="deltatimeclass.cpp" />
     <ClCompile Include="graphicsclass.cpp" />
     <ClCompile Include="inputclass.cpp" />
     <ClCompile Include="lightclass.cpp" />
