--- a/GraduationProject/GraduationProject/GraduationProject.vcxproj.filters
+++ b/GraduationProject/GraduationProject/GraduationProject.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="systemclass.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="deltatimeclass.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="systemclass.cpp">
@@ -75,6 +78,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="d3dclass.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="deltatimeclass.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
