--- a/GraduationProject v2.1/GraduationProject v2.1/GraduationProject v2.1.vcxproj.filters
+++ b/GraduationProject v2.1/GraduationProject v2.1/GraduationProject v2.1.vcxproj.filters
@@ -91,7 +91,7 @@
     <Image Include="data\font.dds">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="bluefreeze.dds">
+    <Image Include="strato.dds">
       <Filter>리소스 파일</Filter>
     </Image>
   </ItemGroup>
