--- a/GraduationProject v3.0/GraduationProject v3.0/GraduationProject v3.0.vcxproj.filters
+++ b/GraduationProject v3.0/GraduationProject v3.0/GraduationProject v3.0.vcxproj.filters
@@ -85,6 +85,9 @@
     <ClCompile Include="timerclass.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="raycastingclass.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bumpmapshaderclass.h">
@@ -166,6 +169,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="timerclass.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="raycastingclass.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
