Add bitmap class and tps camera
Bitmap system is not completed.

--- a/GraduationProject v3.0/GraduationProject v3.0/GraduationProject v3.0.vcxproj
+++ b/GraduationProject v3.0/GraduationProject v3.0/GraduationProject v3.0.vcxproj
@@ -46,6 +46,7 @@
     <Image Include="Texture\Tex_Hat_Shizuoka.png" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="bitmapclass.cpp" />
     <ClCompile Include="bumpmapshaderclass.cpp" />
     <ClCompile Include="bumpmodelclass.cpp" />
     <ClCompile Include="cameraclass.cpp" />
@@ -78,6 +79,7 @@
     <ClCompile Include="timerclass.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="bitmapclass.h" />
     <ClInclude Include="bumpmapshaderclass.h" />
     <ClInclude Include="bumpmodelclass.h" />
     <ClInclude Include="cameraclass.h" />
