--- a/GraduationProject v3.0/GraduationProject v3.0/GraduationProject v3.0.vcxproj.filters
+++ b/GraduationProject v3.0/GraduationProject v3.0/GraduationProject v3.0.vcxproj.filters
@@ -91,6 +91,9 @@
     <ClCompile Include="md5modelclass.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="bitmapclass.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bumpmapshaderclass.h">
@@ -178,6 +181,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="md5modelclass.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="bitmapclass.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
