--- a/GraduationProject v3.0/GraduationProject v3.0/GraduationProject v3.0.vcxproj
+++ b/GraduationProject v3.0/GraduationProject v3.0/GraduationProject v3.0.vcxproj
@@ -19,6 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <None Include="bitmap.ps" />
+    <None Include="bitmap.vs" />
     <None Include="bumpmap_PS.hlsl" />
     <None Include="bumpmap_VS.hlsl" />
     <None Include="font.ps" />
@@ -47,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="bitmapclass.cpp" />
+    <ClCompile Include="bitmapshaderclass.cpp" />
     <ClCompile Include="bumpmapshaderclass.cpp" />
     <ClCompile Include="bumpmodelclass.cpp" />
     <ClCompile Include="cameraclass.cpp" />
@@ -80,6 +83,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bitmapclass.h" />
+    <ClInclude Include="bitmapshaderclass.h" />
     <ClInclude Include="bumpmapshaderclass.h" />
     <ClInclude Include="bumpmodelclass.h" />
     <ClInclude Include="cameraclass.h" />
@@ -119,6 +123,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Effects.fx">
+      <FileType>Document</FileType>
+    </None>
     <FxCompile Include="SkymapShader.fx">
       <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">VS</EntryPointName>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">4.0_level_9_1</ShaderModel>
