Add sound system and define.h
Sounds
 >> BGM
 >> Sawing wood sound
 >> Destruction wood sound

--- a/GraduationProject v3.0/GraduationProject v3.0/GraduationProject v3.0.vcxproj
+++ b/GraduationProject v3.0/GraduationProject v3.0/GraduationProject v3.0.vcxproj
@@ -60,6 +60,7 @@
     <ClCompile Include="fontclass.cpp" />
     <ClCompile Include="fontshaderclass.cpp" />
     <ClCompile Include="fpsclass.cpp" />
+    <ClCompile Include="gameclass.cpp" />
     <ClCompile Include="graphicsclass.cpp" />
     <ClCompile Include="inputclass.cpp" />
     <ClCompile Include="lightclass.cpp" />
@@ -91,10 +92,12 @@
     <ClInclude Include="collisionclass.h" />
     <ClInclude Include="cpuclass.h" />
     <ClInclude Include="d3dclass.h" />
+    <ClInclude Include="define.h" />
     <ClInclude Include="fireshaderclass.h" />
     <ClInclude Include="fontclass.h" />
     <ClInclude Include="fontshaderclass.h" />
     <ClInclude Include="fpsclass.h" />
+    <ClInclude Include="gameclass.h" />
     <ClInclude Include="graphicsclass.h" />
     <ClInclude Include="inputclass.h" />
     <ClInclude Include="lightclass.h" />
