--- a/GraduationProject v3.0/GraduationProject v3.0/GraduationProject v3.0.vcxproj.filters
+++ b/GraduationProject v3.0/GraduationProject v3.0/GraduationProject v3.0.vcxproj.filters
@@ -283,6 +283,12 @@
     <None Include="Effects.fx">
       <Filter>쉐이더 파일</Filter>
     </None>
+    <None Include="fire.ps">
+      <Filter>텍스쳐</Filter>
+    </None>
+    <None Include="fire.vs">
+      <Filter>텍스쳐</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Text Include="data\cube.txt">
